--- a/2024.09.21-HW-1/Task-6/task6.vcxproj
+++ b/2024.09.21-HW-1/Task-6/task6.vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{c118d599-61f4-434c-90c5-7d64174b4ea9}</ProjectGuid>
-    <RootNamespace>taska9</RootNamespace>
+    <ProjectGuid>{b3cdab85-6883-4045-9535-724945f2a153}</ProjectGuid>
+    <RootNamespace>Task6</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Task-6</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -127,7 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source9.cpp" />
+    <ClCompile Include="Source6.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
